# scantailor-advanced

./: .clang-format  .gitignore  .travis.yml  AboutDialog.ui  AbstractCommand.h  AbstractFilter.h  AbstractRelinker.h  Application.cpp  Application.h  AtomicFileOverwriter.cpp  AtomicFileOverwriter.h  AutoManualMode.h  BackgroundExecutor.cpp  BackgroundExecutor.h  BackgroundTask.cpp  BackgroundTask.h  BasicImageView.cpp  BasicImageView.h  BeforeOrAfter.h  BlackOnWhiteEstimator.cpp  BlackOnWhiteEstimator.h  BubbleAnimation.cpp  BubbleAnimation.h  CMakeLists.txt  ChangedStateItemDelegate.h  CollapsibleGroupBox.cpp  CollapsibleGroupBox.h  ColorScheme.h  ColorSchemeManager.cpp  ColorSchemeManager.h  CommandLine.cpp  CommandLine.h  CompositeCacheDrivenTask.h  ConsoleBatch.cpp  ConsoleBatch.h  ContentBoxPropagator.cpp  ContentBoxPropagator.h  ContentSpanFinder.cpp  ContentSpanFinder.h  DarkScheme.cpp  (+219 more)
dewarping/: CMakeLists.txt  Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DetectVertContentBounds.cpp  DetectVertContentBounds.h  DewarpingPointMapper.cpp  DewarpingPointMapper.h  DistortionModel.cpp  DistortionModel.h  DistortionModelBuilder.cpp  DistortionModelBuilder.h  RasterDewarper.cpp  RasterDewarper.h  TextLineRefiner.cpp  TextLineRefiner.h  TextLineSegmenter.cpp  TextLineSegmenter.h  TextLineTracer.cpp  TextLineTracer.h  TopBottomEdgeTracer.cpp  TopBottomEdgeTracer.h  TowardsLineTracer.cpp  TowardsLineTracer.h
filters/deskew/: ApplyDialog.cpp  ApplyDialog.h  ApplyDialog.ui  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Dependencies.cpp  Dependencies.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Params.cpp  Params.h  Settings.cpp  Settings.h  Task.cpp  Task.h  Thumbnail.cpp  Thumbnail.h
filters/fix_orientation/: ApplyDialog.cpp  ApplyDialog.h  ApplyDialog.ui  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Settings.cpp  Settings.h  Task.cpp  Task.h
filters/output/: ApplyColorsDialog.cpp  ApplyColorsDialog.h  ApplyColorsDialog.ui  BinarizationOptionsWidget.h  BlackWhiteOptions.cpp  BlackWhiteOptions.h  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  ChangeDewarpingDialog.cpp  ChangeDewarpingDialog.h  ChangeDewarpingDialog.ui  ChangeDpiDialog.cpp  ChangeDpiDialog.h  ChangeDpiDialog.ui  ColorCommonOptions.cpp  ColorCommonOptions.h  ColorGrayscaleOptions.cpp  ColorGrayscaleOptions.h  ColorParams.cpp  ColorParams.h  ColorPickupInteraction.cpp  ColorPickupInteraction.h  DepthPerception.cpp  DepthPerception.h  DespeckleLevel.cpp  DespeckleLevel.h  DespeckleState.cpp  DespeckleState.h  DespeckleView.cpp  DespeckleView.h  DespeckleVisualization.cpp  DespeckleVisualization.h  DewarpingMode.cpp  DewarpingMode.h  DewarpingOptions.cpp  DewarpingOptions.h  DewarpingView.cpp  DewarpingView.h  FillColorProperty.cpp  (+65 more)
filters/page_layout/: Alignment.cpp  Alignment.h  ApplyDialog.cpp  Filter.h  (+27 more)
foundation/: AlignedArray.h  AutoRemovingFile.cpp  AutoRemovingFile.h  CMakeLists.txt  DynamicPool.h  FastQueue.h  FlagOps.h  Grid.h  GridLineTraverser.cpp  GridLineTraverser.h  Hashes.h  IntrusivePtr.h  MatMNT.h  MatT.h  NonCopyable.h  NumericTraits.h  PerformanceTimer.cpp  PerformanceTimer.h  PriorityQueue.h  Property.h  PropertyFactory.cpp  PropertyFactory.h  PropertySet.cpp  PropertySet.h  Proximity.cpp  Proximity.h  QtSignalForwarder.cpp  QtSignalForwarder.h  RefCountable.h  SafeDeletingQObjectPtr.h  ScopedDecInc.h  ScopedIncDec.h  Span.h  StaticPool.h  TaskStatus.h  Utils.cpp  Utils.h  ValueConv.h  VecNT.h  VecT.h  (+6 more)
imageproc/: AdjustBrightness.cpp  AdjustBrightness.h  BWColor.h  BackgroundCleaner.cpp  BackgroundCleaner.h  BackgroundColorCalculator.cpp  BackgroundColorCalculator.h  BadAllocIfNull.cpp  BadAllocIfNull.h  Binarize.cpp  Binarize.h  BinaryImage.cpp  BinaryImage.h  BinaryThreshold.cpp  BinaryThreshold.h  BitOps.cpp  BitOps.h  ByteOrder.h  CMakeLists.txt  ColorForId.h  ColorInterpolation.cpp  ColorInterpolation.h  ColorMixer.h  ColorSegmenter.cpp  ColorSegmenter.h  ColorTable.cpp  ColorTable.h  ConnComp.h  ConnCompEraser.cpp  ConnCompEraser.h  ConnCompEraserExt.cpp  ConnCompEraserExt.h  Connectivity.h  ConnectivityMap.cpp  ConnectivityMap.h  Constants.cpp  Constants.h  DentFinder.cpp  DentFinder.h  Dpm.cpp  (+65 more)
interaction/: CMakeLists.txt  DragHandler.cpp  DragHandler.h  DragWatcher.cpp  DragWatcher.h  DraggableLineSegment.cpp  DraggableLineSegment.h  DraggableObject.h  DraggablePoint.cpp  DraggablePoint.h  DraggablePolygon.cpp  DraggablePolygon.h  InteractionHandler.cpp  InteractionHandler.h  InteractionState.cpp  InteractionState.h  InteractiveXSpline.cpp  InteractiveXSpline.h  ObjectDragHandler.cpp  ObjectDragHandler.h  ZoomHandler.cpp  ZoomHandler.h
math/: ArcLengthMapper.cpp  ArcLengthMapper.h  CMakeLists.txt  HomographicTransform.h  LineBoundedByRect.cpp  LineBoundedByRect.h  LineIntersectionScalar.cpp  LineIntersectionScalar.h  LinearFunction.cpp  LinearFunction.h  LinearSolver.cpp  LinearSolver.h  MatrixCalc.h  PolylineIntersector.cpp  PolylineIntersector.h  QuadraticFunction.cpp  QuadraticFunction.h  SidesOfLine.cpp  SidesOfLine.h  ToLineProjector.cpp  ToLineProjector.h  XSpline.cpp  XSpline.h
tests/: CMakeLists.txt  TestContentSpanFinder.cpp  TestMatrixCalc.cpp  TestSmartFilenameOrdering.cpp  main.cpp
zones/: BasicSplineVisualizer.cpp  BasicSplineVisualizer.h  CMakeLists.txt  EditableSpline.cpp  EditableSpline.h  EditableZoneSet.cpp  EditableZoneSet.h  SerializableSpline.cpp  SerializableSpline.h  SplineSegment.cpp  SplineSegment.h  SplineVertex.cpp  SplineVertex.h  Zone.cpp  Zone.h  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneContextMenuItem.h  ZoneCreationInteraction.cpp  ZoneCreationInteraction.h  ZoneDefaultInteraction.cpp  ZoneDefaultInteraction.h  ZoneDragInteraction.cpp  ZoneDragInteraction.h  ZoneInteractionContext.cpp  ZoneInteractionContext.h  ZoneSet.cpp  ZoneSet.h  ZoneVertexDragInteraction.cpp  ZoneVertexDragInteraction.h
(+1065 files in other folders)
